--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Natal</title>
+    <link rel="stylesheet" href="natal.css">
+    <script src="natal.js"></script>
+</head>
+<body onload="gerarBolas()">
+    <span id="natal"></span>
+    <div class="elemento">
+         <h1>FELIZ NATAL E UM PRÓSPERO ANO NOVO!</h1>
+    </div>
+    <img id="imagem" src="natal.webp" alt="">
+</body>
+</html>
