--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natal</title>
-    <link rel="stylesheet" href="natal.css">
-    <script src="natal.js"></script>
+    <link rel="stylesheet" href="estilo.css">
+    <script src="estudo.js"></script>
 </head>
 <body onload="gerarBolas()">
     <span id="natal"></span>
